Fix sign out button not working on Firefox

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -42,6 +42,15 @@
 }
 */
 
+.signout-button {
+  color: white;
+}
+
+.signout-button:hover {
+  color: white;
+  text-decoration: none;
+}
+
 .userID {
   display: inline-block;
   margin: 0 20px 0 -20px;
